name:                goblet
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/Nolrai/goblet#readme
license:             BSD3
license-file:        LICENSE
author:              Christopher A. Upshaw
maintainer:          chrisaupshaw@gmail.com
copyright:           2016 Christopher A. Upshaw
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.Goblet.Board, Game.Goblet.Game, Game.Goblet.Draw
  build-depends:       base >= 4.7 && < 5, threepenny-gui >= 0.7, mtl > 2.0
  default-language:    Haskell2010

executable goblet
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , goblet
  default-language:    Haskell2010

test-suite goblet-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , goblet
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Nolrai/goblet
